# swarms

./: .gitignore  README.md  main.py  pure-swarm.py  pyproject.toml  setup-uv.bat  setup-uv.sh  start.bat  start.sh  swarm-soccer.py  swarm.py
